changed predicted range so it visually matches the ground truth

--- a/autoencoder_track_infinity/evaluate_encoded_data.ipynb
+++ b/autoencoder_track_infinity/evaluate_encoded_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(_enc_data: np.ndarray, _range_gt: np.ndarray) -> np.float:\n",
     "    clf = RandomForestRegressor(max_depth= 5, n_estimators = 5, random_state=0)\n",
-    "    xy_range_gt = np.array([np.sin(_range_gt), np.cos(_range_gt)]).T\n",
+    "    xy_range_gt = np.array([np.cos(_range_gt), np.sin(_range_gt)]).T\n",
     "    \n",
     "    N = _range_gt.shape[0]\n",
     "    \n",
@@ -90,6 +90,9 @@
     "\n",
     "        range_diff_all = np.append(range_diff_all, range_diff)\n",
     "        range_predict_all = np.append(range_predict_all, range_predict)\n",
+    "    \n",
+    "    \n",
+    "    range_predict_all[range_predict_all < 0.0] = range_predict_all[range_predict_all < 0.0] + 2* np.pi\n",
     "    \n",
     "    return np.sqrt(np.sum(np.square(range_diff_all))/len(range_diff_all)), range_predict_all\n",
     "\n",
@@ -129,15 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range ground truth: (2600,)\n",
-      "images: (2600, 304, 808, 3)\n"
+      "range ground truth: (1600,)\n",
+      "imgages: (1600, 304, 808, 3)\n"
      ]
     }
    ],
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
