--- a/autoencoder_track_zero/evaluate_encoded_data.ipynb
+++ b/autoencoder_track_zero/evaluate_encoded_data.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "def evaluate(_enc_data: np.ndarray, _range_gt: np.ndarray) -> np.float:\n",
     "    clf = RandomForestRegressor(max_depth= 5, n_estimators = 5, random_state=0)\n",
-    "    xy_range_gt = np.array([np.sin(_range_gt), np.cos(_range_gt)]).T\n",
+    "    xy_range_gt = np.array([np.cos(_range_gt), np.sin(_range_gt)]).T\n",
     "    \n",
     "    N = _range_gt.shape[0]\n",
     "    \n",
@@ -90,6 +90,8 @@
     "\n",
     "        range_diff_all = np.append(range_diff_all, range_diff)\n",
     "        range_predict_all = np.append(range_predict_all, range_predict)\n",
+    "    \n",
+    "    range_predict_all[range_predict_all < 0.0] = range_predict_all[range_predict_all < 0.0] + 2* np.pi\n",
     "    \n",
     "    return np.sqrt(np.sum(np.square(range_diff_all))/len(range_diff_all)), range_predict_all\n",
     "\n",
